Switched to object oriented code base. Renamed SwimConverter to SwimActivity.

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is the source code behind my swim time converter app available on the Android market.
+This is the source code for my swim time converter app available on the Android market.
